src/test/deca/codegen/invalid/factorial_overflow_float.res
1.00000e+00
1.00000e+00
2.00000e+00
6.00000e+00
2.40000e+01
1.20000e+02
7.20000e+02
5.04000e+03
4.03200e+04
3.62880e+05
3.62880e+06
3.99168e+07
4.79002e+08
6.22702e+09
8.71783e+10
1.30767e+12
2.09228e+13
3.55687e+14
6.40237e+15
1.21645e+17
2.43290e+18
5.10909e+19
1.12400e+21
2.58520e+22
6.20448e+23
1.55112e+25
4.03291e+26
1.08889e+28
3.04888e+29
8.84176e+30
2.65253e+32
8.22284e+33
2.63131e+35
8.68332e+36
2.95233e+38
Erreur : débordement pendant opération arithmétique entre deux flottants.
